ebnf.txt
program         = { statement } ;

statement       = rule | action_statement ;

rule            = "when", condition, "{", { action_statement }, "}" ;

condition       = event, [time_condition] ;

event           = identifier, "in", location ;

time_condition  = ("after" | "before"), time ;

action_statement = action, arguments ;

action          = identifier ;

arguments       = argument, { ",", argument } ;

argument        = string | location | device | identifier ;

location        = string ;

device          = string ;

time            = hour, ":", minute ;

hour            = digit, [digit] ;
minute          = digit, digit ;

identifier      = letter, { letter | digit | "_" } ;
string          = '"', { character }, '"' ;

digit           = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;
letter          = "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" 
                | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t" 
                | "u" | "v" | "w" | "x" | "y" | "z" 
                | "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" 
                | "K" | "L" | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T" 
                | "U" | "V" | "W" | "X" | "Y" | "Z" ;

character       = letter | digit | " " | "_" | "-" | "." | "!" | "?" ;
